--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,53 +1,59 @@
-*{
+* {
   padding: 0px;
   margin: 0px;
 }
 
 .App {
   display: flex;
-  justify-content: center ;
   align-items: flex-end;
-  text-align: left;
-  width: 400px;
-  height: 580px;
+  width: 500px;
+  height: 100vh;
   border: 2px solid;
   border-radius: 15px;
   margin: auto;
-  
+  background-color: #e5ddd5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  margin-left: 5px;
+  border-radius: 5px;
+  border-style: none;
+  height: 30px;
+  padding-left: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inputNome {
+  width: 20%;
+  margin-left: 8px;
+  ;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.inputTexto {
+  width: 50%;
+  margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  border-style: none;
+  background-color: #fff;
+  width: 20%;
+  height: 30px;
+  margin-left: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputs {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.listaMensagem {
+  background-color: #fff;
+  text-align: left;
+  border-radius: 5px;
+  min-width: 20%;
+  max-width: 70%;
+  margin-left: 10px;
 }
 
